force-app/main/default/objects/QA_Form__c.object
<CustomObject>
    <fields>
        <fullName>Acknowledgement__c</fullName>
        <label>Acknowledgement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Active_Listening__c</fullName>
        <label>Active Listening</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Attendance__c</fullName>
        <label>Attendance</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Attentive_Engagement__c</fullName>
        <label>Attentive Engagement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AuthenticatedSupplier__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created for 01246792</description>
        <label>Authenticated Supplier</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Authenticated_Supplier__c</fullName>
        <label>Authenticated Supplier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AverageScore__c</fullName>
        <description>yTica Average Score</description>
        <label>Average Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Average_Score2__c</fullName>
        <label>Average Score</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Caller_Education__c</fullName>
        <label>Caller Education</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Chat_Case_Number__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Related Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>QA_Forms</relationshipLabel>
        <relationshipName>QA_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Closing__c</fullName>
        <label>Closing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Completion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created for 01246792</description>
        <label>Completion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Compliance__c</fullName>
        <label>Compliance</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Conversation_Control__c</fullName>
        <label>Conversation Control</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CreatedSFDCcaseCasecomments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created for 01246792</description>
        <label>Created SFDC case/Case comments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_SFDC_Case_Case_Comment__c</fullName>
        <label>Created SFDC Case/Case Comment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_of_Score__c</fullName>
        <description>Date the QA form was scored.</description>
        <label>Date of Score</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Didn_t_share_internal_contact_info__c</fullName>
        <label>Didn&apos;t share internal contact info</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Didntshareinternalcontactinfo__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created for 01246792</description>
        <label>Didn&apos;t share internal contact info</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Contact_Completion_Offered__c</fullName>
        <description>Created for 01246792</description>
        <label>First Contact Completion Offered</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Follow_up__c</fullName>
        <label>Follow-up</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Logical_Progression__c</fullName>
        <label>Logical Progression</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>No_signs_of_Call_Avoidance__c</fullName>
        <label>No signs of Call Avoidance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>No_use_of_Inappropriate_Language__c</fullName>
        <label>No use of Inappropriate Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NosignsofCallAvoidance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created for 01246792</description>
        <label>No signs of Call Avoidance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NouseofInappropriatelanguage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created for 01246792</description>
        <label>No use of Inappropriate language</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opening_Avetta_Branding__c</fullName>
        <label>Opening/Avetta Branding</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Overall_Comments__c</fullName>
        <label>Overall Comments</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Pass_Non_Negotiables__c</fullName>
        <description>Evaluates to true if all chat non-negotiable questions are &quot;Yes&quot;</description>
        <formula>and(
    ISPICKVAL(Authenticated_Supplier__c, &quot;Yes&quot;),
    ISPICKVAL(No_signs_of_Call_Avoidance__c, &quot;Yes&quot;),
    ISPICKVAL(No_use_of_Inappropriate_Language__c, &quot;Yes&quot;),
    ISPICKVAL(Proper_Regard_for_all_processes__c , &quot;Yes&quot;),
    ISPICKVAL(Created_SFDC_Case_Case_Comment__c, &quot;Yes&quot;),
    ISPICKVAL(First_Contact_Completion_Offered__c, &quot;Yes&quot;),
    ISPICKVAL(Didn_t_share_internal_contact_info__c, &quot;Yes&quot;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pass Non-Negotiables</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Process__c</fullName>
        <label>Process</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Productivity__c</fullName>
        <label>Productivity</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Professionalism_Ownership__c</fullName>
        <label>Professionalism &amp; Ownership</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proper_Regard_for_all_processes__c</fullName>
        <label>Proper Regard for all processes</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Properregardforallprocesses__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created for 01246792</description>
        <label>Proper regard for all processes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rep_Id__c</fullName>
        <externalId>true</externalId>
        <label>Rep Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rep_Name__c</fullName>
        <label>Rep Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>QA_Form</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <label>Resolution</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFDC_Case__c</fullName>
        <label>SFDC Case</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SSP_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User lookup field to display the SSP reps name.</description>
        <label>SSP Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>QA_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StarRating__c</fullName>
        <description>yTica Star Rating</description>
        <label>Star Rating</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Talkdesk_Activity__c</fullName>
        <label>Talkdesk Activity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tone__c</fullName>
        <label>Tone</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Verifications__c</fullName>
        <label>Verifications</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>QA Form</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Y-{0000000}</displayFormat>
        <label>QA Form Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QA Forms</pluralLabel>
    <recordTypes>
        <fullName>QA_Form_Case</fullName>
        <active>true</active>
        <description>QA form for field values specific to cases</description>
        <label>QA Form Case</label>
    </recordTypes>
    <recordTypes>
        <fullName>QA_Form_Chat</fullName>
        <active>true</active>
        <description>QA chat record type that contains specific field Values</description>
        <label>QA Form Chat</label>
    </recordTypes>
    <recordTypes>
        <fullName>QA_Form_Email</fullName>
        <active>true</active>
        <description>QA form for emails with unique field values</description>
        <label>QA Form Email</label>
    </recordTypes>
    <recordTypes>
        <fullName>QA_Form_Phone</fullName>
        <active>true</active>
        <description>Record Type for phone call quality assurance values</description>
        <label>QA Form Phone</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>